--- a/main.css
+++ b/main.css
@@ -1,6 +1,9 @@
 @media screen and (max-width: 950px) {
+    .displayNonePhone {
+        display: none !important;
+    }
     .widthS {
-        width: 38vw !important;
+        width: 36vw !important;
     }
     .widthXS {
         width: 28vw !important;
@@ -10,15 +13,13 @@
         width: 65vw !important;
     }
     .widthM {
-        width: 50vw !important;
+        width: 40vw !important;
     }
     .widthXL {
         width: 80vw !important;
     }
-
-    
     .alignCPH {
-        align-items: center;
+        align-items: center !important;
     }
     .circle-mp {
         height: 22vh !important;
@@ -36,7 +37,7 @@
         height: 10px !important;
         left: 49% !important;
         bottom: 20% !important;
-    } 
+    }
     .vertical-line-mp {
         height: 3rem !important;
     }
@@ -52,9 +53,6 @@
         height: 5px !important;
         border-radius: 50%;
         border: 3px solid #ccc !important;
-    }
-    .stepper-item.active {
-        font-weight: bold;
     }
     .stepper-item.completed .step-counter {
         border: 3px solid #5384ED !important;
@@ -113,12 +111,6 @@
     .blankHXL {
         height: 16vh !important;
     }
-    .bgColorAM {
-        height: 900px !important;
-    }
-    .verLineAMWhite {
-        height: 2.0rem !important;
-    }
     .iconLOGO {
         width: 1rem !important;
     }
@@ -145,13 +137,18 @@
         right: 50px !important;
     }
     .marginAll {
-        margin: 0px 0 !important;
+        margin: 0 !important;
+    }
+    .marginAllL {
+        margin: 0 !important;
     }
     .designThinkingAM {
-        border: 1px solid #5384ED !important;
+        border: 2px solid #5384ED !important;
+        height: 7rem !important;
+        width: 7rem !important;
     }
     .icon-list {
-        width: 3px !important;
+        width: 10px !important;
         margin-right: 10px;
     }
     /* gardeners hub*/
@@ -481,10 +478,6 @@
     .marginAll1920 {
         margin: 0px 42vh !important;
     }
-    .designThinkingAM {
-        height: 3vw !important;
-        width: 8vw !important;
-    }
     .widthS1920 {
         width: 13vw !important;
     }
@@ -519,8 +512,6 @@
     .blankHL1920 {
         height: 7.0vh !important;
     }
-
-
 }
 
 table {
@@ -546,7 +537,7 @@ th {
     font-weight: 300;
 }
 
-tr:nth-child(even) {
+td:nth-child(even) {
     background-color: #f5f5f5c5;
 }
 
@@ -705,6 +696,11 @@ br {
 .blankHS {
     display: block;
     height: 3.0vh;
+}
+
+.blankVS {
+    display: block;
+    width: 3.0vh;
 }
 
 .blankHM {
@@ -973,9 +969,9 @@ body {
 .stepper-item::before {
     position: absolute;
     content: "";
-    border-bottom: 2px solid #ccc;
+    border-bottom: 1px solid #ccc;
     width: 100%;
-    top: 15px;
+    top: 8px;
     left: -50%;
     z-index: 2;
 }
@@ -983,9 +979,9 @@ body {
 .stepper-item::after {
     position: absolute;
     content: "";
-    border-bottom: 2px solid #ccc;
+    border-bottom: 1px solid #ccc;
     width: 100%;
-    top: 15px;
+    top: 8px;
     left: 50%;
     z-index: 2;
 }
@@ -996,28 +992,28 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 15px;
-    height: 15px;
+    width: 8px;
+    height: 8px;
     border-radius: 50%;
-    border: 10px solid #ccc;
+    border: 4px solid #ccc;
     background: white;
     margin-bottom: 6px;
 }
-
-.stepper-item.active {
-    font-weight: bold;
+.stepper-item.completed .step-counter {
+    border: 4px solid #5384ed9d;
 }
 
-.stepper-item.completed .step-counter {
-    border: 10px solid #5384ED;
+
+.stepper-item.active .step-counter {
+    border: 4px solid #5384ED;
 }
 
 .stepper-item.completed::after {
     position: absolute;
     content: "";
-    border-bottom: 2px solid #657baa;
+    border-bottom: 1px solid #5384ED;
     width: 100%;
-    top: 15px;
+    top: 8px;
     left: 50%;
     z-index: 3;
 }
@@ -1031,7 +1027,7 @@ body {
 }
 
 .step-name {
-    font-size: 18px;
+    font-size: 16px;
 }
 
 /* step progress bar */
@@ -1111,6 +1107,7 @@ body {
     font-weight: 300;
     box-shadow: 0 2px 4px 0 rgba(238, 238, 238, 0.795), 0 2px 8px 0 rgba(0, 0, 0, 0.19);
 }
+
 .research-arrow {
     margin: 6rem 3rem;
     border: solid black;
@@ -1132,18 +1129,6 @@ body {
     height: 4vw;
     width: 4vw;
     border-radius: 50%;
-}
-
-.designThinkingAM {
-    border: 5px solid;
-    border-width: 5px;
-    border-image-slice: 1;
-    height: 4vw;
-    width: 14vw;
-}
-
-.designThinkingAM-blue {
-    border-image-source: linear-gradient(to left, #BACCF4, #5384ED);
 }
 
 .circle-gh {
@@ -1169,8 +1154,27 @@ body {
     box-shadow: rgba(109, 109, 109, 0.45) 0px 25px 20px -20px;
 }
 
-.shadow1 {
-    box-shadow: 0 29px 38px 0 rgba(0, 0, 0, 0.016), 0 36px 68px 0 rgba(0, 0, 0, 0.075);
+.shadowOnly:hover {
+    box-shadow: 0 29px 38px 0 rgba(0, 0, 0, 0.096), 0 36px 68px 0 rgba(0, 0, 0, 0.075);
+}
+
+.shadowOnly {
+    box-shadow: rgba(109, 109, 109, 0.45) 0px 25px 20px -20px;
+}
+
+.shadowAll {
+    box-shadow: rgba(0, 0, 0, 0.20) 0px 25px 20px -20px;
+}
+
+.photos {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    opacity: 1;
+    box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
 }
 
 .clip-shape-shadow {
@@ -1187,6 +1191,16 @@ body {
     height: 1200px;
 }
 
+.photo {
+    display: none;
+}
+
+.photo-selected {
+    display: block;
+    animation-name: carousel-animation;
+    animation-duration: 2s;
+}
+
 .color-white:hover {
     filter: drop-shadow(6px 10px 15px rgb(0 0 0 / 0.1));
     transition: transform 930ms ease-in-out;
@@ -1198,7 +1212,7 @@ body {
 }
 
 .border-radius {
-    border-radius: 1em;
+    border-radius: 0.6em;
 }
 
 .border-color-left {
@@ -1271,8 +1285,9 @@ body {
     width: 42vw;
     margin: 4vw;
 }
+
 .widthXS {
-    width: 12vw;
+    width: 15vw;
     margin: 0;
 }
 
@@ -1360,23 +1375,17 @@ body {
 }
 
 .horizontalLAM {
-    border-top: 2px solid rgba(255, 255, 255, 1);
+    border-top: 2px solid rgb(0, 0, 0);
     height: 4px;
     width: 130px;
     margin-top: 0px;
     margin-bottom: 18px;
 }
 
-.verLineAMWhite {
-    border-left: 1px solid rgb(255, 255, 255, 0.8);
-    height: 5.0rem;
-    margin: 0vh 5vh;
-}
-
 .verLineAM {
     border-left: 1px solid gray;
     height: 5.0rem;
-    margin: 3vw 5vw;
+    margin: 0vw 5vw;
 }
 
 .horizontal-line-mp {
@@ -1428,7 +1437,6 @@ body {
 
 /* body-project- new css test */
 
-
 .body-h-project {
     display: flex;
     flex-direction: row;
@@ -1448,12 +1456,18 @@ body {
     margin: 0px 14vh;
 }
 
+.marginAllL {
+    margin: 0px 30rem;
+}
+
 .marginElm {
     margin: 2rem;
 }
+
 .marginIcon {
     margin: 1.5rem;
 }
+
 .margin-none {
     margin: 0;
 }
@@ -1558,7 +1572,9 @@ body {
 .colorAP {
     color: #5384ED;
 }
-
+.colorAPbg {
+    background-color: #E2EDFD !important;
+}
 .text-project-numbers {
     display: flex;
     justify-content: center;
@@ -1577,15 +1593,6 @@ body {
     font-weight: 300;
     font-size: 30px;
     margin-bottom: 30px;
-}
-
-.bgColorAM {
-    height: 130vw;
-    background-image: -webkit-linear-gradient(265deg, #5384ED 90%, #ffffff 10%);
-}
-
-.bgColorAMRV {
-    background-image: -webkit-linear-gradient(85deg, #5384ED 90%, #ffffff 10%);
 }
 
 .bgGrey {
@@ -1932,31 +1939,6 @@ animation-play-state: paused;
     width: 100%;
 }
 
-.shadowAll {
-    box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
-}
-
-.photos {
-    position: relative;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    opacity: 1;
-    box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
-}
-
-.photo {
-    display: none;
-}
-
-.photo-selected {
-    display: block;
-    animation-name: carousel-animation;
-    animation-duration: 2s;
-}
-
 @keyframes carousel-animation {
     0% {
         opacity: 0.2;
@@ -2041,6 +2023,11 @@ button {
     text-transform: uppercase;
 }
 
+.textL {
+    font-weight: 400;
+    font-size: 1.8rem;
+}
+
 .tTXL {
     font-weight: 400;
     font-size: 2.5rem;
@@ -2053,7 +2040,11 @@ button {
     font-weight: 100;
     margin: 0;
 }
-
+.tTM {
+    font-size: 1.4rem;
+    font-weight: 400;
+    margin: 0;
+}
 .tSL {
     font-size: 1.5rem;
     font-weight: 100;
@@ -2132,7 +2123,7 @@ button {
 }
 
 .t-time {
-    font-size: 2.0vh;
+    font-size: 1.8 rem;
     font-weight: 100;
     font-style: italic;
     margin-bottom: 15px;
