--- a/main.css
+++ b/main.css
@@ -11,17 +11,18 @@
         height: 9rem !important;
         width: 9rem !important;
     }
-    .verLineAM {
-        border-left: 1px solid gray;
+    .lineVerS {
         height: 3.0rem !important;
         margin: 0vw 5vw;
     }
     .heightM {
         height: 10rem !important;
     }
-    
     .widthL {
         width: 20rem !important;
+    }
+    .widthMPHoneH {
+        width: 10rem !important;
     }
     #widthRC {
         width: 10rem !important;
@@ -37,17 +38,13 @@
         width: 65vw !important;
     }
     .widthM {
-        width: 20rem !important;
+        width: 18rem !important;
     }
     .widthXL {
         width: 80vw !important;
     }
-
     .tTQ {
         font-size: 10px !important;
-    }
-    .colorGreyShadow {
-        box-shadow: rgba(109, 109, 109, 0.45) 0px 25px 20px -20px !important;
     }
     /* fonts going to delete */
     .t-icon-s {
@@ -91,8 +88,6 @@
     .displayNonePhone {
         display: none !important;
     }
-
-
     .circle-mp {
         height: 22vh !important;
         width: 22vh !important;
@@ -112,6 +107,11 @@
     }
     .lineVerAll-mp {
         height: 3rem !important;
+    }
+    .lineHorizS {
+        margin: 4px !important;
+        height: 3px !important;
+        width: 30px !important;
     }
     /* step progress bar */
     .stepper-item::before {
@@ -152,7 +152,7 @@
     .marginInner {
         margin: 0 6vh !important;
     }
-    .horizontalLAM {
+    .lineHoriz {
         height: 1px !important;
         width: 90px !important;
     }
@@ -186,8 +186,6 @@
     .blankHXL {
         height: 14rem !important;
     }
-
-
     .widthLogo {
         width: 1rem !important;
     }
@@ -227,7 +225,6 @@
         height: 7rem !important;
         width: 7rem !important;
     }
- 
     /* gardeners hub*/
     .speech-bubble {
         position: relative;
@@ -248,7 +245,6 @@
         margin-left: -5px !important;
         margin-top: -10px !important;
     }
-
     .align-left-phone {
         display: flex;
         align-items: flex-start !important;
@@ -258,18 +254,12 @@
         height: 0.5vh !important;
         width: 0.5vh !important;
     }
-
-
     .padding-lr {
         padding: 1vh !important;
     }
     .body-txt {
         margin: 0 !important;
     }
-    .body-left {
-        margin: 0 !important;
-    }
-
     .heightL {
         height: 13rem !important;
     }
@@ -290,10 +280,10 @@
         margin-top: 2vh !important;
         height: 5vh !important;
     }
-    .row-change {
+    .rowChng {
         flex-direction: column !important;
     }
-    .row-changeRV {
+    .rowChngRV {
         flex-direction: column-reverse !important;
     }
     .icon-s {
@@ -336,7 +326,7 @@
     }
     .lineVerAll {
         border-left: 1px solid rgb(194, 194, 194) !important;
-        height: 2px !important;
+        height: 40px !important;
         margin: 10px/* top&bottom*/
         15px !important/* left&right*/
         ;
@@ -374,17 +364,14 @@
     /* header */
     /* body */
     .blankVer {
-        height: 6px !important;
-        margin: 10px !important;
+        display: none !important;
     }
-
     .body-h {
         margin-bottom: 0vh !important;
     }
     .intro {
         flex-direction: column !important;
     }
-
     .t-hi {
         font-size: 36px !important;
     }
@@ -489,14 +476,12 @@
     .widthL1920 {
         width: 70rem!important;
     }
-
     .Nav {
         top: 23% !important;
     }
     .carousel {
         height: 28vw !important;
     }
-
     .blankHL1920 {
         height: 25.0vh !important;
     }
@@ -516,6 +501,12 @@ body {
     border: 1px solid #4C665B;
 }
 
+.colorBorderL {
+    border-left-style: solid;
+    border-left-color: #FED256;
+    border-left-width: 5px;
+}
+
 .border-radius {
     border-radius: 0.6em;
 }
@@ -528,33 +519,11 @@ body {
     margin-bottom: 18px;
 }
 
-.verLineAM {
-    border-left: 1px solid gray;
-    height: 5.0rem;
-    margin: 0vw 5vw;
-}
-
 .lineHorizAll-mp {
     border-top: 1px solid #FFBF00;
     height: 0px;
     width: 6vh;
     margin: 3vh 0;
-}
-
-.horizontalLAM {
-    border-top: 2px solid rgb(129, 129, 129);
-    height: 3px;
-    width: 130px;
-    margin-top: 0px;
-    margin-bottom: 18px;
-}
-
-.lineHorizS{
-    border-top: 1px solid #707070;
-    height: 0px;
-    width: 5rem;
-    margin-top: 0px;
-    margin-bottom: 1vw;
 }
 
 .lineVerAll {
@@ -565,10 +534,28 @@ body {
     /* left&right*/
 }
 
-.-s {
+.lineVerS {
     border-left: 1px solid gray;
-    height: 100px;
-    margin: 5px;
+    height: 5.0rem;
+    margin: 0vw 5vw;
+}
+
+.lineHoriz {
+    border-top: 2px solid rgb(129, 129, 129);
+    height: 3px;
+    width: 130px;
+    margin-top: 0px;
+    margin-bottom: 18px;
+}
+
+.lineHorizS {
+    margin: 1.0rem 2rem;
+    display: block;
+    height: 6px;
+    width: 40px;
+    background-color: #5384ED;
+    border-radius: 20px;
+    border: none;
 }
 
 .lineVerAll-mp {
@@ -583,11 +570,6 @@ body {
     margin: 8vh 5vh;
 }
 
-.blankVer {
-    border-left: 0px solid gray;
-    height: 20vh;
-    margin: 0 4vh;
-}
 .circle {
     position: absolute;
     border: solid 1px rgb(92, 92, 92);
@@ -596,6 +578,7 @@ body {
     border-radius: 50%;
     opacity: 0.8;
 }
+
 .researchArr {
     margin: 6rem 3rem;
     border: solid black;
@@ -612,6 +595,7 @@ body {
     height: 15.0vh;
     margin: 0 6vw;
 }
+
 .circle-mp {
     height: 12rem;
     width: 12rem;
@@ -644,7 +628,7 @@ body {
     flex-direction: row;
 }
 
-.row-change {
+.rowChng {
     display: flex;
     flex-direction: row;
 }
@@ -695,14 +679,21 @@ body {
 /* alignment */
 
 /* color and shadow*/
+
 .colorGH {
     color: #4C665B;
 }
+
 .colorGHBg {
     background-color: #EAF0EE;
 }
+
 .colorMP {
     color: #FED256;
+}
+
+.colorMPbg {
+    background-color: #FED256;
 }
 
 .colorAP {
@@ -713,22 +704,12 @@ body {
     background-color: #E2EDFD !important;
 }
 
-.colorGreyShadow {
+.colorGrey {
     background-color: #F5F5F5;
-    box-shadow: rgba(109, 109, 109, 0.45) 0px 25px 20px -20px;
-}
-
-.colorWtShadow {
-    background-color: #ffffff;
-    box-shadow: rgba(141, 141, 141, 0.45) 0px 25px 20px -20px;
 }
 
 .shadowOnly {
     box-shadow: rgba(109, 109, 109, 0.45) 0px 25px 20px -20px;
-}
-
-.shadowAll {
-    box-shadow: rgba(0, 0, 0, 0.20) 0px 25px 20px -20px;
 }
 
 .clip-shape-shadow {
@@ -745,13 +726,8 @@ body {
     height: 1200px;
 }
 
-.border-color-left {
-    border-left-style: solid;
-    border-left-color: #FED256;
-    border-left-width: 5px;
-}
-
 /* color and shadow*/
+
 /* margin and padding*/
 
 .marginAll {
@@ -762,12 +738,18 @@ body {
     margin: 0px 30rem;
 }
 
+.marginAllS {
+    margin: 4vh;
+}
+
 .marginS {
     margin: 0vh 1vh;
 }
+
 .marginM {
     margin: 0vh 4vh;
 }
+
 .marginElm {
     margin: 2rem;
 }
@@ -805,12 +787,15 @@ body {
     margin-bottom: 2vw;
     margin-right: 2vw;
 }
+
 .paddingS {
     padding: 1rem;
 }
+
 .paddingM {
     padding: 3rem;
 }
+
 .padding {
     padding: 1vw;
 }
@@ -840,20 +825,24 @@ body {
 }
 
 /* margin anf padding*/
+
 /* width and height */
 
 .widthIconS {
     width: 1.5rem;
     margin-right: 10px;
 }
+
 .widthLogo {
     width: 6vh;
     margin: 9px;
 }
+
 .widthIconM {
     width: 8rem;
     margin-right: 10px;
 }
+
 .widthIconL {
     width: 12rem;
     margin-right: 10px;
@@ -862,7 +851,6 @@ body {
 .icon-l {
     width: 8rem;
 }
-
 
 .widthAll {
     width: 60vw;
@@ -877,6 +865,10 @@ body {
 }
 
 .widthM {
+    width: 40rem;
+}
+
+.widthMPHoneH {
     width: 40rem;
 }
 
@@ -906,7 +898,7 @@ body {
 
 .blankHXS {
     display: block;
-    height: 1.0vh;
+    height: 2rem;
 }
 
 .blankHS {
@@ -927,6 +919,12 @@ body {
 .blankHXL {
     display: block;
     height: 28rem;
+}
+
+.blankVer {
+    border-left: 0px solid gray;
+    height: 20vh;
+    margin: 0 4vh;
 }
 
 /* blank */
@@ -957,11 +955,11 @@ body {
     transition-property: transform;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     transform: translateZ(0);
-    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
 }
 
 .float:hover {
     transform: translateY(-15px);
+    box-shadow: 0 29px 38px 0 rgba(0, 0, 0, 0.096), 0 36px 68px 0 rgba(0, 0, 0, 0.075);
 }
 
 @keyframes hover-float {
@@ -981,21 +979,14 @@ body {
     border: 1px solid #4C665B;
 }
 
-.colorGreyShadow:hover {
-    box-shadow: 0 29px 38px 0 rgba(0, 0, 0, 0.096), 0 36px 68px 0 rgba(0, 0, 0, 0.075);
-}
-
-.colorWtShadow:hover {
-    filter: drop-shadow(6px 10px 15px rgb(0 0 0 / 0.1));
-    transition: transform 930ms ease-in-out;
-}
-
 .shadowOnly:hover {
     box-shadow: 0 29px 38px 0 rgba(0, 0, 0, 0.096), 0 36px 68px 0 rgba(0, 0, 0, 0.075);
 }
 
 /* hover */
+
 /* table */
+
 table {
     border-collapse: collapse;
     width: 100%;
@@ -1022,12 +1013,14 @@ th {
 td:nth-child(even) {
     background-color: #f5f5f5c5;
 }
+
 /* table */
 
 ul {
     list-style-position: inside;
     margin: 0;
     padding: 0;
+    
     list-style-type: none;
 }
 
@@ -1078,10 +1071,10 @@ strong {
     font-weight: 300;
 }
 
-
 .zTop {
     z-index: 99;
 }
+
 .speech-bubble-nopointer {
     position: relative;
     background: #FED256;
@@ -1107,12 +1100,8 @@ strong {
     margin-top: -0.562em;
     margin-left: -0.562em;
 }
+
 /* margin */
-
-
-
-
-
 
 .photos {
     position: relative;
@@ -1156,20 +1145,8 @@ strong {
     height: 60vw;
 }
 
-.bg-colorMP-noheight1 {
-    background-color: #FED256;
-    margin: 0;
-}
-
-.bg-colorMP-noheight {
-    background-color: #F5F5F5;
-    margin: 0;
-}
-
-.colorWtBg{
-
+.colorWtBg {
     background-color: #ffffff;
-
 }
 
 .marquee {
@@ -1524,11 +1501,13 @@ button {
     font-weight: 400;
     margin: 0;
 }
+
 .titleXS {
     font-size: 0.8rem;
     font-weight: 400;
     margin: 0;
 }
+
 .textL {
     font-size: 1.9rem;
     font-weight: 100;
@@ -1587,12 +1566,6 @@ button {
     display: flex;
     flex-direction: column;
     margin-left: 400px;
-}
-
-.body-left {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
 }
 
 .body-right {
